# Chess-Engine

./: CMakeLists.txt  README.md  vcpkg-configuration.json
src/: main.cpp
src/board/: Color.hpp  GameBoard.cpp  GameBoard.hpp  PiecePosition.cpp  PiecePosition.hpp
src/pieces/: Bishop.cpp  Bishop.hpp  King.cpp  King.hpp  Knight.cpp  Knight.hpp  Pawn.cpp  Pawn.hpp  Piece.cpp  Piece.hpp  PieceColor.hpp  PieceConfig.cpp  PieceConfig.hpp  PieceSet.cpp  PieceSet.hpp  PieceType.hpp  Queen.cpp  Queen.hpp  Resource.hpp  Rook.cpp  Rook.hpp
src/state/: GameState.cpp  GameState.hpp
src/static/: Config.hpp  Definitions.hpp  PieceColor.hpp
src/window/: Window.cpp  Window.hpp  WindowConfig.hpp
